Bevel edge with segment = 1 produces undesired UV result on UV boundry edge #78733

Closed
opened 2020-07-08 11:44:09 +02:00 by Daniel Bystedt · 6 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-05 20:45, hash: baf124c753
Worked: version 2.83.1

Short description of error
Bevel on edge that belongs to uv border does not give correct behaviour in uv editor. This worked in blender 2.83.1

Exact steps for others to reproduce the error

  • Create default cube and enter edit mode
  • Select edge with index 2 on default cube

Bevel with amount of segments not dividable by 2 (e.g 1, 3, 5, 7 etc)

Detailed error description

  • Edge belongs to uv boundry
  • Bevel operator has amount of segment that are not dividable by 2 (e.g. 1, 3, 5, 7 etc)
  • Is not edge with index 0, 4 or 10 on default cube??!?!?!!?!
{F8677894, height = 200} Starting point {F8677897, height = 200} Bevel segments = 2 has desired uv behavior {F8677899, height = 200} Bevel segment = 1 has undesired uv behavior
{F8677910, height = 200} Starting point {F8677912, height = 200} Bevel segments = 2 has desired uv behaviour {F8677920, height = 200} Bevel segment = 1 has desired uv behaviour, but I can not figure out why since other border edges does not work. The edges marked with green with index 0, 4 & 10 has desired uv behaviour for unknown reason

[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-05 20:45, hash: `baf124c753` Worked: version 2.83.1 **Short description of error** Bevel on edge that belongs to uv border does not give correct behaviour in uv editor. This worked in blender 2.83.1 **Exact steps for others to reproduce the error** - Create default cube and enter edit mode - Select edge with index 2 on default cube # Bevel with amount of segments not dividable by 2 (e.g 1, 3, 5, 7 etc) **Detailed error description** - Edge belongs to uv boundry - Bevel operator has amount of segment that are not dividable by 2 (e.g. 1, 3, 5, 7 etc) - Is not edge with index 0, 4 or 10 on default cube??!?!?!!?! |{[F8677894](https://archive.blender.org/developer/F8677894/image.png), height = 200} Starting point| {[F8677897](https://archive.blender.org/developer/F8677897/image.png), height = 200} Bevel segments = 2 has desired uv behavior| {[F8677899](https://archive.blender.org/developer/F8677899/image.png), height = 200} Bevel segment = 1 has undesired uv behavior| | -- | -- | -- | |{[F8677910](https://archive.blender.org/developer/F8677910/image.png), height = 200} Starting point| {[F8677912](https://archive.blender.org/developer/F8677912/image.png), height = 200} Bevel segments = 2 has desired uv behaviour| {[F8677920](https://archive.blender.org/developer/F8677920/image.png), height = 200} Bevel segment = 1 has desired uv behaviour, **but I can not figure out why since other border edges does not work**. The edges marked with green with index 0, 4 & 10 has desired uv behaviour for unknown reason| [Based on the default startup or an attached .blend file (as simple as possible)]
Author
Member

Added subscriber: @DanielBystedt

Added subscriber: @DanielBystedt
Howard Trickey was assigned by Daniel Bystedt 2020-07-08 12:22:23 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for these examples. I will work on fixing this.

Thanks for these examples. I will work on fixing this.

This issue was referenced by 731d9f0bfa

This issue was referenced by 731d9f0bfa40cabd33abcbabc37acca9bc5837eb
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author
Member

Wow! That was fixed quick. Thank you Howard :-)

Wow! That was fixed quick. Thank you Howard :-)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78733
No description provided.