Fix T78733 Bevel sometimes produces zero-area UV face with odd segments.

A bug introduced when I made the choice of interpolation face cleverer.